<resources>
    <string name="app_name">Aromathèque</string>
    <string name="title_new_eo">Ajouter une huile essentielle</string>
    <string name="title_new_vo">Ajouter une huile végétale</string>
    <string name="title_new_recipe">Ajouter une recette</string>
    <string name="title_new_bottle">Ajouter un flacon</string>
    <string name="title_edit_eo">Modifier l\'huile essentielle</string>
    <string name="title_edit_vo">Modifier l\'huile végétale</string>
    <string name="title_edit_recipe">Modifier la recette</string>
    <string name="title_edit_bottle">Modifier le flacon</string>
    <string name="properties">Propriétés</string>
    <string-array name="navigation_drawer_images_white">
        <item>@drawable/ic_book_white</item>
        <item>@drawable/ic_recipe_white</item>
        <item>@drawable/ic_bottle_nav_white</item>
        <item>@drawable/ic_essential_oil_white</item>
        <item>@drawable/ic_vegetal_oil_white</item>
        <item>@drawable/ic_star_nav_white</item>
        <item>@drawable/ic_discover</item>
        <item>@drawable/ic_website_white</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Sommaire</item>
        <item>Recettes</item>
        <item>Flacons</item>
        <item>Huiles Essentielles</item>
        <item>Huiles Végétales</item>
        <item>Favoris</item>
        <item>Aide</item>
        <item>Site web</item>
    </string-array>
    <string-array name="navigation_drawer_account_images">
        <item>@drawable/ic_action_delete_account</item>
        <item>@drawable/ic_action_logout</item>
    </string-array>
    <string-array name="drawer_account_items">
        <item>Supprimer le compte</item>
        <item>Déconnexion</item>
    </string-array>
    <string-array name="favorites">
        <item>Recettes</item>
        <item>Huiles essentielles</item>
        <item>Huiles végétales</item>
    </string-array>
    <string-array name="tutorial_titles">
        <item>@string/tuto1_title</item>
        <item>@string/tuto2_title</item>
        <item>@string/tuto3_title</item>
        <item>@string/tuto4_title</item>
    </string-array>
    <string-array name="tutorial_contents">
        <item>@string/tuto1_content</item>
        <item>@string/tuto2_content</item>
        <item>@string/tuto3_content</item>
        <item>@string/tuto4_content</item>
    </string-array>
    <string name="navigation_drawer_open">Ouvrir le menu latéral</string>
    <string name="navigation_drawer_close">Fermer le menu latéral</string>
    <string name="action_edit">Editer</string>
    <string name="action_favorite">Marquer comme favorite</string>
    <string name="action_settings">Paramètres</string>
    <string name="name">Nom</string>
    <string name="description">Description</string>
    <string name="indications">Indications</string>
    <string name="save_vegetal_oil">Huile végétale enregistrée</string>
    <string name="edit_vegetal_oil">Huile végétale modifiée</string>
    <string name="delete_vegetal_oil">Huile végétale supprimée</string>
    <string name="delete_vegetal_oil_warning">Cette huile végétale sera supprimée.\n\nRemarque :
        cette opération modifiera également les recettes composées de cette huile végétale.</string>
    <string name="save_failed">La sauvegarde a échoué</string>
    <string name="delete_failed">La suppression a échoué</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Annuler</string>
    <string name="without_name">(Sans nom)</string>
    <string name="botanical_name">Nom botanique</string>
    <string name="distilled_organ">Partie distillée</string>
    <string name="chemotype">Principale(s) molécule(s)</string>
    <string name="precautions">Précautions d\'emploi</string>
    <string name="administrations">Voies d\'administration</string>
    <string name="author">Auteur</string>
    <string name="preparation">Préparation</string>
    <string name="composition">Composition</string>
    <string name="essential_oils">Huiles essentielles</string>
    <string name="vegetal_oils">Huiles végétales</string>
    <string name="brand">Marque</string>
    <string name="price">Prix</string>
    <string name="currency">€</string>
    <string name="volume_unit">ml</string>
    <string name="volume">Volume</string>
    <string name="origin">Origine</string>
    <string name="pure">100% pure et naturelle</string>
    <string name="bio">Bio</string>
    <string name="hebbd">HEBBD (Huile Essentielle Biologiquement et Biochimiquement Définie)</string>
    <string name="hect">HECT (Huile Essentielle ChemoTypée)</string>
    <string name="expiration_date">Date d\'expiration</string>
    <string name="quality">Qualité</string>
    <string name="save_essential_oil">Huile essentielle enregistrée</string>
    <string name="edit_essential_oil">Huile essentielle modifiée</string>
    <string name="delete_essential_oil">Huile essentielle supprimée</string>
    <string name="delete_essential_oil_warning">Cette huile essentielle sera supprimée.\n\nRemarque :
        cette opération supprimera également les flacons correspondants et modifiera les recettes
        composées de cette huile essentielle.</string>
    <string name="category">Catégorie</string>
    <string name="use">Utilisation</string>
    <string name="save_recipe">Recette enregistrée</string>
    <string name="edit_recipe">Recette modifiée</string>
    <string name="delete_recipe_warning">Cette recette sera supprimée</string>
    <string name="delete_recipe">Recette supprimée</string>
    <string name="save_bottle">Flacon enregistré</string>
    <string name="edit_bottle">Flacon modifié</string>
    <string name="delete_bottle">Flacon supprimé</string>
    <string name="pick_essential_oil">Choisir une huile essentielle</string>
    <string name="without_brand">(Sans marque)</string>
    <string name="unknown">\?</string>
    <string name="delete_bottle_warning">Ce flacon sera supprimé</string>
    <string name="expire">expire</string>
    <string name="all">Toutes</string>
    <string name="undefined">(non défini)</string>
    <string name="no_essential_oil">Aucune huile essentielle</string>
    <string name="how_to_add_essential_oil">Pour ajouter une huile essentielle, appuyez sur le bouton + ci-dessous.</string>
    <string name="list_is_empty">La liste est vide</string>
    <string name="no_favorite">Aucun favori</string>
    <string name="how_to_add_essential_oil_favorite">Pour ajouter une huile essentielle à vos favoris, appuyez sur l\'étoile située à coté de son nom.</string>
    <string name="no_vegetal_oil">Aucune huile végétale</string>
    <string name="how_to_add_vegetal_oil">Pour ajouter une huile végétale, appuyez sur le bouton + ci-dessous.</string>
    <string name="how_to_add_vegetal_oil_favorite">Pour ajouter une huile végétale à vos favoris, appuyez sur l\'étoile située à coté de son nom.</string>
    <string name="no_recipe">Aucune recette</string>
    <string name="how_to_add_recipe">Pour ajouter une recette, appuyez sur le bouton + ci-dessous.</string>
    <string name="how_to_add_recipe_favorite">Pour ajouter une recette à vos favoris, appuyez sur l\'étoile située à coté de son nom.</string>
    <string name="how_to_add_categorized_recipe">Pour ajouter une recette dans cette catégorie, appuyez sur le bouton + ci-dessous puis choisissez la catégorie dans la liste.</string>
    <string name="no_bottle">Aucun flacon</string>
    <string name="how_to_add_bottle">Pour ajouter un flacon, appuyez sur le bouton + ci-dessous.</string>
    <string name="how_to_add_bottle_when_no_essential_oil">Pour ajouter un flacon, il faut au préalable avoir ajouté au moins une huile essentielle. Pour ajouter une huile essentielle, ouvrez la section Huiles Essentielles puis appuyez sur le bouton +.</string>
    <string name="welcome_card_title">Bienvenue</string>
    <string name="welcome_card_content">Merci d\'avoir installé cette application. Elle propose des fiches d\'aromathérapie qui vous aideront au quotidien (huiles essentielles, huiles végétales, recettes). Sachez que vos flacons peuvent être enregistrés dans l\'application, pour un meilleur suivi. Enfin, l\'outil de recherche intégré vous permet de trouver rapidement une fiche.</string>
    <string name="got_it">Compris</string>
    <string name="about_card_title">A Propos</string>
    <string name="about_card_content">Nous sommes deux à faire vivre cette application: Sophie s\'occupe du contenu et Thomas du développement mobile. C\'est un projet personnel qui nous tient à coeur et qui a trouvé sa place à coté de vie de famille et vie professionnelle.</string>
    <string name="helpus_card_title">Aidez-nous!</string>
    <string name="helpus_card_content">Vous pensez qu\'il manque une fonctionnalité ou des fiches? Dites-le nous, nous tenons compte de vos remarques dans les mises à jour.</string>
    <string name="about_card_button_text">Visiter le site</string>
    <string name="helpus_card_button_text">Réagir par mail</string>
    <string name="oil_card_button_text">Voir la fiche</string>
    <string name="tuto_card_button_text">Autres astuces</string>
    <string name="tuto1_title">Ajouter une recette</string>
    <string name="tuto2_title">Ajouter un flacon</string>
    <string name="tuto3_title">Ajouter une huile</string>
    <string name="tuto4_title">Voies d\'administrations</string>
    <string name="tuto1_content">Dans la vue \"Recettes\", appuyez sur le bouton + pour ajouter une nouvelle recette puis saisissez sa composition et les étapes de préparation. Pensez à lui donner une catégorie et une utilisation, il sera plus facile de la retrouver par la suite.</string>
    <string name="tuto2_content">Dans la vue \"Flacons\", appuyez sur le bouton + pour ajouter un nouveau flacon puis saisissez toutes ses caractéristiques. Une fois vos flacons enregistrés, toute votre aromathèque sera à portée de main: avant de réaliser une recette pour pourrez vérifier rapidement la disponibilité et la validité d\'une huile essentielle.</string>
    <string name="tuto4_content">Pour une huile essentielle, il y a jusqu\'à trois voies d\'administrations possibles. Retrouvez-les sous forme de pictogramme sur chaque fiche.</string>
    <string name="tuto3_content">Nous ne référençons malheureusement pas toutes les huiles essentielles disponibles sur le marché. L\'application est relativement jeune et nous avons privilégié dans un premier temps les huiles les plus communément utilisées. Nous ajouterons spontanément ou sur demande de nouvelles fiches. Vous pouvez malgré tout enrichir vous-même la base en créant de nouvelles fiches. Dans la vue \"Huiles Essentielles\", appuyez sur le bouton + pour ajouter une nouvelle fiche puis saisissez toutes ses caractéristiques.</string>
    <string name="recipe_card_title">Dernières recettes</string>
    <string name="general">Général</string>
    <string name="mail_action">Envoyer un email</string>
    <string name="email_no_client">Aucune application mail installée.</string>
    <string name="browser_no_client">Aucun navigateur web installé</string>
    <string name="message_read_only_essential_oil">Cette huile essentielle ne peut être supprimée</string>
    <string name="message_read_only_vegetal_oil">Cette huile végétale ne peut être supprimée</string>
    <string name="zoom_on">Zoom sur ...</string>
    <string name="recipes">Recettes</string>
    <string name="cancel_modifications">Annuler les modifications?</string>
    <string name="administration_ways">Voies d\'administration :</string>
    <string name="open_helper_classname">fr.delicatessences.delicatessences.model.DatabaseHelper</string>
    <string name="bottle_of">Flacon:\u0020</string>
    <string name="eo_of">Huile essentielle:\u0020</string>
    <string name="vo_of">Huile végétale:\u0020</string>
    <string name="recipe_of">Recette:\u0020</string>
    <string name="action_search">Rechercher</string>
</resources>