<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent_color"
        android:textSize="@dimen/edit_section_text_size"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="@dimen/edit_activity_section_padding_left"
        android:paddingTop="@dimen/section_padding_top"
        android:paddingBottom="@dimen/section_padding_bottom"
        android:text="@string/quality"/>



    <fr.delicatessences.delicatessences.editor.CustomCheckBox
        android:id="@+id/pure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pure"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/body_text_size"/>

    <fr.delicatessences.delicatessences.editor.CustomCheckBox
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/body_text_size"/>

    <fr.delicatessences.delicatessences.editor.CustomCheckBox
        android:id="@+id/hebbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hebbd"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/body_text_size"/>

    <fr.delicatessences.delicatessences.editor.CustomCheckBox
        android:id="@+id/hect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hect"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/body_text_size"/>
</merge>