<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context="fr.delicatessences.delicatessences.activities.EditVOActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/edit_activity_vertical_margin"
            android:paddingLeft="@dimen/edit_activity_horizontal_margin"
            android:paddingRight="@dimen/edit_activity_horizontal_margin"
            android:paddingTop="@dimen/edit_activity_vertical_margin"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_color"
                android:textSize="@dimen/edit_section_text_size"
                android:textStyle="bold"
                android:paddingLeft="@dimen/edit_activity_section_padding_left"
                android:text="@string/general"/>

            <fr.delicatessences.delicatessences.editor.CustomEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                custom:clearEnabled="false" />


            <fr.delicatessences.delicatessences.editor.CustomEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:hint="@string/description"
                android:paddingTop="16dp" />


            <include layout="@layout/activity_edit_properties" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>