<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context="fr.delicatessences.delicatessences.fragments.DetailRecipeFragment">

    <com.manuelpeinado.fadingactionbar.view.ObservableScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/header"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/rubber"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/view_rubber_height"
                    android:paddingLeft="@dimen/view_padding_horizontal"
                    android:paddingRight="@dimen/view_padding_horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/rubber_padding_top"
                        android:paddingBottom="@dimen/rubber_padding_bottom"
                        android:visibility="gone"
                        android:layout_weight="1"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/category_image"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/rubber_image_margin"
                            android:background="@drawable/shape_oval_tranparent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/category_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/view_text_size"
                            android:textColor="@color/recipe_category_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/use"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/rubber_padding_top"
                        android:paddingBottom="@dimen/rubber_padding_bottom"
                        android:visibility="gone"
                        android:layout_weight="1"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/use_image"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/rubber_image_margin"
                            android:background="@drawable/shape_oval_tranparent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/use_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/view_text_size"
                            android:textColor="@color/recipe_category_color"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:paddingLeft="@dimen/view_padding_horizontal"
                    android:paddingRight="@dimen/view_padding_horizontal"
                    android:paddingTop="@dimen/view_padding_vertical"
                    android:paddingBottom="@dimen/view_padding_bottom">

                    <TextView
                        android:id="@+id/author_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"/>

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="@dimen/view_vertical_spacing"/>

                    <TextView
                        android:id="@+id/composition_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/composition"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"/>

                    <TextView
                        android:id="@+id/composition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="@dimen/view_vertical_spacing"/>


                    <TextView
                        android:id="@+id/preparation_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preparation"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"/>

                    <TextView
                        android:id="@+id/preparation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textSize="@dimen/view_text_size"
                        android:textColor="@android:color/black"
                        />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="235dp"
                android:layout_marginLeft="@dimen/view_padding_horizontal"
                android:textSize="28sp"
                android:visibility="gone"
                android:textColor="@android:color/white" />


        </FrameLayout>




    </com.manuelpeinado.fadingactionbar.view.ObservableScrollView>



</FrameLayout>